# brain-to-text

./: .gitignore  Makefile  README.md  pyproject.toml
brain_to_text/model_evaluation/: evaluate_model.py  evaluate_model_helpers.py
brain_to_text/model_training/: dataset.py  rnn_args.yaml  rnn_model.py  rnn_trainer.py  train_model.py  training_args.yaml
brain_to_text/utils/: general_utils.py
